# rust-haifa

./: Cargo.toml  README.md
00_ownership/: Cargo.toml
00_ownership/src/: borrow_check.rs  closure_move.rs  dag.rs  dag2.rs  fn_param.rs  lifetime_v1.rs  update_array.rs
01_std_using/src/: main.rs
03_array/: Cargo.toml
03_array_vec_slice/src/: arrays.rs  slice_1.rs  vec_1.rs
04_closure/: Cargo.toml
04_closure/src/: closure_size.rs  fn_counter.rs  fn_type.rs  simulate_closure.rs  thread_spawn.rs
05_traits/: Cargo.toml
05_traits/src/: main.rs
06_iterators/src/: counter_iterator.rs  iterators_01.rs
07_io/src/: io_1.rs
10_convert/: Cargo.toml
10_convert/src/: all_convert.rs  array_1.rs  asref_1.rs  into_1.rs  iterator_1.rs  str_1.rs  string_1.rs
11_static_server/: Cargo.toml
11_static_server/src/: http_server.rs  http_server_2.rs
12_merino_sock5/: Cargo.toml  README.md
12_merino_sock5/src/: lib.rs  main.rs
13_cargo_01/: Cargo.toml
13_cargo_01/src/: lib.rs
13_cargo_02/: Cargo.toml
13_cargo_02/src/: main.rs
14_concurrent/: Cargo.toml
14_concurrent/src/: async_await.rs  unsafe_seq.rs
15_csv_challenge/: Cargo.toml
15_csv_challenge/src/: core.rs  err.rs  main.rs  opt.rs
15_csv_challenge/src/core/: read.rs
16_macro/: Cargo.toml
16_macro/src/: hashmap_macro.rs  macro_1.rs  macro_2.rs  macro_3.rs
18_nom/: Cargo.toml
18_nom/src/: hex1.rs
19_kv_read/: Cargo.toml
19_kv_read/src/: as_ref_trait.rs  from_trait.rs
20_async/: Cargo.toml
20_async/src/: counter.rs
21_collection/: Cargo.toml
21_collection/src/: hashmap.rs
22_smart_pointer/: Cargo.toml
22_smart_pointer/src/: CellV2.rs  box.rs  cell.rs  pin.rs
23_tokio_example/: Cargo.toml
23_tokio_example/src/: sp_1.rs  tokio_echo.rs
static/: 1.html
